tests/equals/equals.exp
Error ---------------------------------------------------------------------------------------------------- equals.js:7:1

Cannot compare number [1] to string [2] with a non-strict equality check. Make sure the arguments are valid, or try
using strict equality (`===` or `!==`) instead. [invalid-compare]

   equals.js:7:1
   7| 1 == ''; // error
      ^ [1]

References:
   equals.js:7:6
   7| 1 == ''; // error
           ^^ [2]


Error ---------------------------------------------------------------------------------------------------- equals.js:8:1

Cannot compare string [1] to number [2] with a non-strict equality check. Make sure the arguments are valid, or try
using strict equality (`===` or `!==`) instead. [invalid-compare]

   equals.js:8:1
   8| '' == 1; // error
      ^^ [1]

References:
   equals.js:8:7
   8| '' == 1; // error
            ^ [2]



Found 2 errors
